; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_cb_pcidas.c_nvram_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_cb_pcidas.c_nvram_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.comedi_device = type { i32 }

@devpriv = common dso_local global %struct.TYPE_2__* null, align 8
@ETIMEDOUT = common dso_local global i32 0, align 4
@MCSR_NV_ENABLE = common dso_local global i32 0, align 4
@MCSR_NV_LOAD_LOW_ADDR = common dso_local global i32 0, align 4
@AMCC_OP_REG_MCSR_NVCMD = common dso_local global i64 0, align 8
@AMCC_OP_REG_MCSR_NVDATA = common dso_local global i64 0, align 8
@MCSR_NV_LOAD_HIGH_ADDR = common dso_local global i32 0, align 4
@MCSR_NV_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.comedi_device*, i32, i32*)* @nvram_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvram_read(%struct.comedi_device* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.comedi_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store %struct.comedi_device* %0, %struct.comedi_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @devpriv, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %8, align 8
  %12 = load i64, i64* %8, align 8
  %13 = call i64 @wait_for_nvram_ready(i64 %12)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %3
  %16 = load i32, i32* @ETIMEDOUT, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %4, align 4
  br label %65

18:                                               ; preds = %3
  %19 = load i32, i32* @MCSR_NV_ENABLE, align 4
  %20 = load i32, i32* @MCSR_NV_LOAD_LOW_ADDR, align 4
  %21 = or i32 %19, %20
  %22 = load i64, i64* %8, align 8
  %23 = load i64, i64* @AMCC_OP_REG_MCSR_NVCMD, align 8
  %24 = add i64 %22, %23
  %25 = call i32 @outb(i32 %21, i64 %24)
  %26 = load i32, i32* %6, align 4
  %27 = and i32 %26, 255
  %28 = load i64, i64* %8, align 8
  %29 = load i64, i64* @AMCC_OP_REG_MCSR_NVDATA, align 8
  %30 = add i64 %28, %29
  %31 = call i32 @outb(i32 %27, i64 %30)
  %32 = load i32, i32* @MCSR_NV_ENABLE, align 4
  %33 = load i32, i32* @MCSR_NV_LOAD_HIGH_ADDR, align 4
  %34 = or i32 %32, %33
  %35 = load i64, i64* %8, align 8
  %36 = load i64, i64* @AMCC_OP_REG_MCSR_NVCMD, align 8
  %37 = add i64 %35, %36
  %38 = call i32 @outb(i32 %34, i64 %37)
  %39 = load i32, i32* %6, align 4
  %40 = lshr i32 %39, 8
  %41 = and i32 %40, 255
  %42 = load i64, i64* %8, align 8
  %43 = load i64, i64* @AMCC_OP_REG_MCSR_NVDATA, align 8
  %44 = add i64 %42, %43
  %45 = call i32 @outb(i32 %41, i64 %44)
  %46 = load i32, i32* @MCSR_NV_ENABLE, align 4
  %47 = load i32, i32* @MCSR_NV_READ, align 4
  %48 = or i32 %46, %47
  %49 = load i64, i64* %8, align 8
  %50 = load i64, i64* @AMCC_OP_REG_MCSR_NVCMD, align 8
  %51 = add i64 %49, %50
  %52 = call i32 @outb(i32 %48, i64 %51)
  %53 = load i64, i64* %8, align 8
  %54 = call i64 @wait_for_nvram_ready(i64 %53)
  %55 = icmp slt i64 %54, 0
  br i1 %55, label %56, label %59

56:                                               ; preds = %18
  %57 = load i32, i32* @ETIMEDOUT, align 4
  %58 = sub nsw i32 0, %57
  store i32 %58, i32* %4, align 4
  br label %65

59:                                               ; preds = %18
  %60 = load i64, i64* %8, align 8
  %61 = load i64, i64* @AMCC_OP_REG_MCSR_NVDATA, align 8
  %62 = add i64 %60, %61
  %63 = call i32 @inb(i64 %62)
  %64 = load i32*, i32** %7, align 8
  store i32 %63, i32* %64, align 4
  store i32 0, i32* %4, align 4
  br label %65

65:                                               ; preds = %59, %56, %15
  %66 = load i32, i32* %4, align 4
  ret i32 %66
}

declare dso_local i64 @wait_for_nvram_ready(i64) #1

declare dso_local i32 @outb(i32, i64) #1

declare dso_local i32 @inb(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
